# snakemake-logger-plugin-pypsa

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
.github/workflows/: publish.yml
